add import from scopegg